@@ -1,5 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - use Biobambam bamtofastq in place of Picard utility in adapter qc check
+
 release 57.7
  - removed redundant methods from NpgDB model
  - New javascript functionality to process mqc. MQC outcomes are changed using AJAX 
